docs: pakiet v2.0 dokumentacji - Codex w zespole + stan po Sprint 3.2 Paczka 3B
- ZASADY_WSPOLPRACY.md v2.0 (dodany Codex jako 6. czlonek, 7 nowych zasad 5.7-5.13)
- ZESPOL.md (nowy) - opis czlonkow zespolu z granica Codex vs Claude Code
- STAN_IMPLEMENTACJI.md (nowy) - mapa modulow, sprintow, ADR statusow
- NARZEDZIA_ZESPOLU.md (nowy) - inwentaryzacja narzedzi zespolu
- sprint3-backlog.md - aktualizacja stanu Sprint 3.2 na 22.04
- Podsumowanie_Projektu_JWCore_v2.md v2.1 - synchronizacja